--- a/.drone.yml
+++ b/.drone.yml
@@ -16,3 +16,15 @@ steps:
       - ./gradlew test
       - ./gradlew build
       - ./gradlew artifactoryPublish
+  - name: "notify"
+    image: plugins/slack
+    settings:
+      webhook:
+        from_secret: slack_webhook_oauth_sdk
+      channel: oauth-sdk
+      template: >
+        {{#success build.status}}
+          Build {{build.number}} succeeded!
+        {{else}}
+          Build {{build.number}} failed! Please fix me at {{build.link}}!
+        {{/success}}
