--- a/.drone.yml
+++ b/.drone.yml
@@ -3,6 +3,13 @@ kind: pipeline
 name: oauth-sdk-pipeline
 
 steps:
+  - name: "notify start"
+    image: plugins/slack
+      settings:
+        webhook:
+          from_secret: slack_webhook_oauth_sdk
+        channel: oauth-sdk
+        template: Build {{build.number}} started.
   - name: "unit, build, package, publish"
     image: davidiamyou/open-jdk-8:latest
     environment:
