attempt to fix pipeline

--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,8 @@ steps:
         webhook:
           from_secret: slack_webhook_oauth_sdk
         channel: oauth-sdk
-        template: Build {{build.number}} started.
+        template: >
+          Build {{build.number}} started at {{datetime build.started}}.
   - name: "unit, build, package, publish"
     image: davidiamyou/open-jdk-8:latest
     environment:
